--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ body, html{
 body{
     background: url(images/ZigZag.webp);
     background-size:cover ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 h2, h5 {
@@ -24,22 +27,43 @@ h2, h5, h6, button {
     font-family: Montserrat;
 }
 
-.option-1{
-    height: 600px;
+.option{
+    height: 650px;
     width: 90%;
     width: 350px;
     background-color:#fff;
     border-radius: 5px;
-    margin: 70px auto;
+    margin: 70px 0;
     box-shadow: 0px 40px 40px -20px #3C7B61;
     position: relative;
     
+}
+
+.option.left{
+    margin-right: -20px;
+}
+
+.option.middle{
+    width: 400px;
+    z-index: 9;
+}
+
+.option.right{
+    margin-left: -20px;
+}
+
+.left, .right{
+    z-index: 1;
 }
 
 #close-button{
     position: absolute;
     top: 15px;
     right: 15px;
+}
+
+.inner-container > img {
+    width: 50%;
 }
 
 .inner-container{
@@ -53,6 +77,7 @@ h2, h5, h6, button {
     margin: 20px 0 10px;
     font-weight: 600;
     font-size: 22px;
+    height: 60px;
 }
 
 .inner-container > p {
@@ -97,10 +122,25 @@ h2, h5, h6, button {
 
  #ready-btn{
     background-color: #46A67E;
-    color: #FFFFFF;
-    border: none;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     box-shadow: 0px 20px 20px rgba(103, 189, 153, 0.2);
+    transition: .4s ease all;
+}
+
+#inactive-btn{
+    background-color: #bdbdbd;
+    color: #FFFFFF;
+    transition: .4s ease all;
+    position: absolute;
+    bottom: 22%;
+    left:50%;
+    transform: translateX(-50%);
+    width: 80%;
+}
+
+.all-btn{
+    color: #FFFFFF;
+    border: none;
     width: 100%;
     border-radius: 5px;
     font-weight: 800;
@@ -109,7 +149,7 @@ h2, h5, h6, button {
     transition: .4s ease all;
 }
 
-#ready-btn:hover {
+.all-btn:hover {
     transition: .4s ease all;
     cursor: pointer;
     text-decoration: underline;
@@ -136,4 +176,17 @@ h2, h5, h6, button {
 
 .dot.green {
     background-color: #67BD99;
+}
+
+.right, .left{
+    display: none;
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+.right, .left{
+    display: block;
+}
+
 }
